fix(MessageAttachment): fixed text align

--- a/src/components/MessageAttachment/MessageAttachment.css
+++ b/src/components/MessageAttachment/MessageAttachment.css
@@ -49,6 +49,7 @@
     margin-left: 6px;
     line-height: var(--message-attachment-header-line-height);
     font-size: var(--message-attachment-from-font-size);
+    text-align: left;
   }
 }
 
